# tap-instantly-ai

./: LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_instantly_ai/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_instantly_ai/schemas/: analytics_campaign_count.json  analytics_campaign_summary.json  campaign_status.json  campaigns.json
tests/: __init__.py  test_core.py
